# eegview

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  eegpanel.ui  main.c  meson.build  project.config  settings.ini
data/: Makefile.am  eegview.conf  eegview.desktop  eegview.desktop.in
debian/: changelog  control  copyright  menu  rules
doc/: Makefile.am  eegview.1
mmpack/: specs
src/: Makefile.am  configuration.c  configuration.h  eegview.c  event-tracker.c  event-tracker.h  fakeact2.c
